force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Multicom_Basket_Id__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Multicom_Basket_Id__c</fullName>
    <label>Multicom Basket Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>