force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Multicom_BoardCode__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Multicom_BoardCode__c</fullName>
    <label>Multicom BoardCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>