force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Multicom_Booking_Stage__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Multicom_Booking_Stage__c</fullName>
    <label>Multicom Booking Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>passenger_details</fullName>
            </value>
            <value>
                <fullName>optional_extras</fullName>
            </value>
            <value>
                <fullName>confirmed_costing</fullName>
            </value>
            <value>
                <fullName>booked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>