force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Multicom_Supplier_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Multicom_Supplier_Name__c</fullName>
    <label>Multicom Supplier Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>