force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Name__c</fullName>
    <description>Excursion , Train , Car Hire</description>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>