force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Name_Of_Driver__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Name_Of_Driver__c</fullName>
    <label>Name Of Driver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>