force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_New_Page__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_New_Page__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Page</label>
    <type>Checkbox</type>
</CustomField>