force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Night__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Night__c</fullName>
    <formula>sugati__SB_To_Date__c -  sugati__SB_From_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nights</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>