force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_No_of_Rooms__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_No_of_Rooms__c</fullName>
    <label>No of Rooms</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>