force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Notes__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Notes__c</fullName>
    <description>OTUK</description>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>