force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Num_Special_Offers__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Num_Special_Offers__c</fullName>
    <label>Num Special Offers</label>
    <summaryFilterItems>
        <field>sugati__Supplier_Cost__c.sugati__SC_Item_Category__c</field>
        <operation>equals</operation>
        <value>Special Offer</value>
    </summaryFilterItems>
    <summaryForeignKey>sugati__Supplier_Cost__c.sugati__SC_Supplier_Booking__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>