force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Occupancy__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Occupancy__c</fullName>
    <label>Occupancy</label>
    <length>40</length>
    <type>Text</type>
</CustomField>