force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Supplier Booking</relationshipLabel>
    <relationshipName>Supplier_Booking</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>