force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Option__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Option__c</fullName>
    <description>Car Hire and Transfer Option Details</description>
    <label>Option</label>
    <length>244</length>
    <type>Text</type>
</CustomField>