force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Option_Price_Before_Discount__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Option_Price_Before_Discount__c</fullName>
    <label>Option Price Before Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>