force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Own_Arrangement__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Own_Arrangement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Own Arrangement</label>
    <type>Checkbox</type>
</CustomField>