force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Payment_Type__c</fullName>
    <description>This is for Tickets and Vouchers</description>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prepaid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>