force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_PBR_Number__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_PBR_Number__c</fullName>
    <label>PBR Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>