force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Phone_No__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Phone_No__c</fullName>
    <label>Phone No</label>
    <type>Phone</type>
</CustomField>