force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Pilot_Details__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Pilot_Details__c</fullName>
    <label>Pilot Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>