force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_PNR__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_PNR__c</fullName>
    <label>PNR</label>
    <length>30</length>
    <type>Text</type>
</CustomField>