force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Provider_Telephone__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Provider_Telephone__c</fullName>
    <label>Provider Telephone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>