force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Quantity__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Quantity__c</fullName>
    <label>Quantity</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>