force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_RecordType__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_RecordType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Record Type</label>
    <referenceTo>sugati__Record_Type__c</referenceTo>
    <relationshipLabel>Supplier Booking</relationshipLabel>
    <relationshipName>Supplier_Booking</relationshipName>
    <type>Lookup</type>
</CustomField>