force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Remove_Images__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Remove_Images__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remove Images</label>
    <type>Checkbox</type>
</CustomField>