force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Remove_TextArea__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Remove_TextArea__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remove TextArea</label>
    <type>Checkbox</type>
</CustomField>