force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Reservation_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Reservation_Confirmed__c</fullName>
    <label>Reservation Confirmed?</label>
    <type>DateTime</type>
</CustomField>