force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Revenue_Country_Id__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Revenue_Country_Id__c</fullName>
    <formula>IF( 
ISBLANK( sugati__SB_Departure_Airport_l__c ), 
IF( 
ISBLANK( sugati__SB_Where_to_go__c ), 
IF( 
ISBLANK( sugati__SB_Arrival_Airport_l__c ), 
IF( 
ISBLANK(sugati__SB_From_Place_Country_Id__c), 
IF( 
ISBLANK( sugati__SB_What_to_do__c ), 
sugati__SB_Supplier__r.sugati__S_Where_to_go__r.sugati__W_Country__c, 
sugati__SB_What_to_do__r.sugati__WH_Where_to_go__r.sugati__W_Country__c 
), 
sugati__SB_From_Place_Country_Id__c 
), 
sugati__SB_Arrival_Airport_l__r.sugati__AIR_Country__c 
), 
sugati__SB_Where_to_go__r.sugati__W_Country__c 
), 
IF( 
BLANKVALUE( sugati__SB_Day__c, 0 ) &lt;= 0, 
sugati__SB_Arrival_Airport_l__r.sugati__AIR_Country__c, 
sugati__SB_Departure_Airport_l__r.sugati__AIR_Country__c 
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Country Id</label>
    <type>Text</type>
</CustomField>