force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Room_Details__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Room_Details__c</fullName>
    <inlineHelpText>Such as Bedding Set up</inlineHelpText>
    <label>Room Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>