force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Room_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Room_Type__c</fullName>
    <description>The value must come from Room Type Object.</description>
    <label>Room Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>