force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_S_VAT_Agency_Commission__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_S_VAT_Agency_Commission__c</fullName>
    <defaultValue>0</defaultValue>
    <label>VAT (Agency Commission)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>