force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Sales_Currency__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Sales_Currency__c</fullName>
    <label>Sales Currency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>GBP</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>