force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Selected_Room_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Selected_Room_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Selected Room Type</label>
    <referenceTo>sugati__Room_Type__c</referenceTo>
    <relationshipLabel>Supplier Booking</relationshipLabel>
    <relationshipName>Supplier_Booking</relationshipName>
    <type>Lookup</type>
</CustomField>