force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Sell__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Sell__c</fullName>
    <formula>IF(
sugati__SB_Zero_Sell_Price_For_Tour__c,
0,
IF(
ISBLANK(sugati__SB_Opportunity__r.sugati__O_Agent__c) ,
Round( sugati__SB_Marked_Up_Cost__c / $Setup.sugati__FormulaSV__c.sugati__Sell_Round_Up__c ,0)*$Setup.sugati__FormulaSV__c.sugati__Sell_Round_Up__c ,
IF(
$Setup.sugati__Financial_Charges__c.sugati__Consider_Agent_Comm_in_Sell_Price__c,
sugati__SB_Marked_Up_Cost__c - sugati__SB_Total_Commission__c - sugati__SB_Total_Agent_Commission__c,
Round((sugati__SB_Marked_Up_Cost__c - sugati__SB_Total_Commission__c)/$Setup.sugati__FormulaSV__c.sugati__Sell_Round_Up__c,0)*$Setup.sugati__FormulaSV__c.sugati__Sell_Round_Up__c
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sell</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>