force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Selling_Price_Actual__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Selling_Price_Actual__c</fullName>
    <label>Selling Price (Actual)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>