force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Show_in_Invoice__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Show_in_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show in Invoice?</label>
    <type>Checkbox</type>
</CustomField>