force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Show_in_Itinerary__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Show_in_Itinerary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show in Itinerary?</label>
    <type>Checkbox</type>
</CustomField>