force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Show_Voucher__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Show_Voucher__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Voucher</label>
    <type>Checkbox</type>
</CustomField>