force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Source__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amadeus</fullName>
            </value>
            <value>
                <fullName>Lime Management</fullName>
            </value>
            <value>
                <fullName>Steamond Travel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>