force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Special_Offer__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Special_Offer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Special Offer</label>
    <referenceTo>sugati__Special_Offer__c</referenceTo>
    <relationshipLabel>Supplier Booking</relationshipLabel>
    <relationshipName>Supplier_Booking</relationshipName>
    <type>Lookup</type>
</CustomField>