force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Suggested_Margin__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Suggested_Margin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Suggested Margin</label>
    <referenceTo>sugati__Margin__c</referenceTo>
    <relationshipLabel>Supplier Booking</relationshipLabel>
    <relationshipName>Supplier_Booking</relationshipName>
    <type>Lookup</type>
</CustomField>