force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Supplier__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier</label>
    <referenceTo>sugati__Supplier__c</referenceTo>
    <relationshipLabel>Supplier Booking</relationshipLabel>
    <relationshipName>Supplier_Booking</relationshipName>
    <type>Lookup</type>
</CustomField>