force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Supplier_Commission_VAT_Amount__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Supplier_Commission_VAT_Amount__c</fullName>
    <label>Supplier Commission VAT Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>