force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Supplier_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Supplier_Name__c</fullName>
    <formula>sugati__SB_Supplier__r.Name</formula>
    <label>Supplier Name</label>
    <type>Text</type>
</CustomField>