force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Supplier_Notes_Rich__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Supplier_Notes_Rich__c</fullName>
    <label>Supplier Notes</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>