force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Supplier_Payment_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Supplier_Payment_Due_Date__c</fullName>
    <formula>sugati__SB_Opportunity__r.sugati__O_Departure_Date__c -  sugati__SB_Supplier__r.sugati__S_Payment_Terms_in_Days__c</formula>
    <label>Supplier Payment Due Date</label>
    <type>Date</type>
</CustomField>