force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Supplier_Voucher__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Supplier_Voucher__c</fullName>
    <formula>IF(
    AND(
        OR(
            UPPER(TEXT(sugati__SB_Opportunity__r.StageName)) == UPPER($Setup.sugati__Sugati_Stage_Name_Mapping__c.sugati__Booked__c), 
            AND(sugati__SB_Opportunity__r.IsClosed, sugati__SB_Opportunity__r.IsWon)
        ),
        CONTAINS($Setup.sugati__Supplier_Voucher_Setting__c.sugati__Accommodation_Component_Lists__c + $Setup.sugati__Supplier_Voucher_Setting__c.sugati__Activity_Component_Lists__c +  $Setup.sugati__Supplier_Voucher_Setting__c.sugati__Transportation_Component_Lists__c + $Setup.sugati__Supplier_Voucher_Setting__c.sugati__Flight_Component_Lists__c, RecordType.Name)
    ), 
    HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) + &apos;apex/&apos; + $Setup.sugati__Site__c.sugati__Namespace__c + &apos;SupplierVouchers?id=&apos; + sugati__SB_Opportunity__r.Id + &apos;&amp;sbid=&apos; + Id, sugati__SB_Opportunity__r.Name, &apos;_blank&apos;
    ), 
    &apos;&apos;
)</formula>
    <label>Supplier Voucher</label>
    <type>Text</type>
</CustomField>