force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Supplier_Voucher_Issue_By__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Supplier_Voucher_Issue_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Voucher Issued By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Supplier_Booking</relationshipName>
    <type>Lookup</type>
</CustomField>