force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_To_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_To_Date__c</fullName>
    <label>To Date</label>
    <type>Date</type>
</CustomField>