force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_To_Place__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_To_Place__c</fullName>
    <label>To Place</label>
    <length>255</length>
    <type>Text</type>
</CustomField>