force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_To_Time__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_To_Time__c</fullName>
    <label>To Time</label>
    <length>5</length>
    <type>Text</type>
</CustomField>