force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Total_Agent_Commission__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Total_Agent_Commission__c</fullName>
    <inlineHelpText>Rolling-up Agent Commission Value SC field from related supplier cost records.</inlineHelpText>
    <label>Total Agent Commission</label>
    <summarizedField>sugati__Supplier_Cost__c.sugati__SC_Agent_Commission_Value_SC__c</summarizedField>
    <summaryFilterItems>
        <field>sugati__Supplier_Cost__c.sugati__SC_Selected__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>sugati__Supplier_Cost__c.sugati__Is_Dummy__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>sugati__Supplier_Cost__c.sugati__SC_Supplier_Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>