force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Total_Margin__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Total_Margin__c</fullName>
    <formula>if($Setup.sugati__Financial_Charges__c.sugati__Margin_On_IB_Per__c,((sugati__SB_Marked_Up_Cost__c - sugati__SB_Cost__c)/sugati__SB_Marked_Up_Cost__c )*100,(sugati__SB_Marked_Up_Cost__c - sugati__SB_Cost__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>