force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Total_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Total_Vehicle__c</fullName>
    <label>Total Vehicle</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>