force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Transfer_Car_Hire_Option__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Transfer_Car_Hire_Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Transfer / Car Hire Option</inlineHelpText>
    <label>Transfer / Car Hire Option</label>
    <referenceTo>sugati__Transfer_Option__c</referenceTo>
    <relationshipLabel>Supplier Booking</relationshipLabel>
    <relationshipName>Supplier_Booking</relationshipName>
    <type>Lookup</type>
</CustomField>