force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Travel_App_Image__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Travel_App_Image__c</fullName>
    <inlineHelpText>Content Version/Attachment record Id or Public URL used in the Travel App Sync</inlineHelpText>
    <label>Travel App Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>