force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Per Person</fullName>
            </value>
            <value>
                <fullName>Shared</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>