force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Vamoos_Id__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Vamoos_Id__c</fullName>
    <inlineHelpText>Id of the respective entity in the Vamoos</inlineHelpText>
    <label>Vamoos Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>