force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Vamoos_Location_Id__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Vamoos_Location_Id__c</fullName>
    <inlineHelpText>Location Id to identify a location entity in the Vamoos</inlineHelpText>
    <label>Vamoos Location Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>