force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_What_to_do__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_What_to_do__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>What to do</label>
    <referenceTo>sugati__Activity__c</referenceTo>
    <relationshipLabel>Supplier Booking</relationshipLabel>
    <relationshipName>Supplier_Booking</relationshipName>
    <type>Lookup</type>
</CustomField>