force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Where_to_go__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Where_to_go__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Where to go</label>
    <referenceTo>sugati__Where_to_go__c</referenceTo>
    <relationshipLabel>Supplier Booking</relationshipLabel>
    <relationshipName>Supplier_Booking</relationshipName>
    <type>Lookup</type>
</CustomField>