force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Zero_Sell_Price_For_Tour__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Zero_Sell_Price_For_Tour__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Using this field in the Sell__c formula field. The field is populated from the record type configuration.</inlineHelpText>
    <label>Zero Sell Price For Tour</label>
    <type>Checkbox</type>
</CustomField>