force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__Sell_Price_Exc_Agent_Commission__c.field-meta.xml
<CustomField>
    <fullName>sugati__Sell_Price_Exc_Agent_Commission__c</fullName>
    <label>Sell Price (Exc. Agent Commission)</label>
    <summarizedField>sugati__Supplier_Cost__c.sugati__SC_Sell_Price_Excluding_Agent_Commission__c</summarizedField>
    <summaryForeignKey>sugati__Supplier_Cost__c.sugati__SC_Supplier_Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>