force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__Send_Extras_Payment_Reminder__c.field-meta.xml
<CustomField>
    <fullName>sugati__Send_Extras_Payment_Reminder__c</fullName>
    <description>This makes a copy of the checkbox from the Tour Setup custom setting so that it can be used as part of the entry criteria in a flow</description>
    <formula>$Setup.sugati__Tour_Setup__c.sugati__Send_Extras_Payment_Reminder__c</formula>
    <label>Send Extras Payment Reminder</label>
    <type>Checkbox</type>
</CustomField>