force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__Total_Cost_Records__c.field-meta.xml
<CustomField>
    <fullName>sugati__Total_Cost_Records__c</fullName>
    <label>Total Cost Records</label>
    <summaryFilterItems>
        <field>sugati__Supplier_Cost__c.sugati__SC_Selected__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>sugati__Supplier_Cost__c.sugati__SC_Supplier_Booking__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>