force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__Total_SB_Discount__c.field-meta.xml
<CustomField>
    <fullName>sugati__Total_SB_Discount__c</fullName>
    <label>Total SB Discount</label>
    <summarizedField>sugati__Supplier_Booking_Discount__c.sugati__Total_DiscountN__c</summarizedField>
    <summaryForeignKey>sugati__Supplier_Booking_Discount__c.sugati__Supplier_Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>